Fixed: mobile version sections spacing

--- a/src/components/nft-sections/PolymorphSection.module.scss
+++ b/src/components/nft-sections/PolymorphSection.module.scss
@@ -111,6 +111,10 @@
   position: relative;
   margin: 100px 0;
 
+  @include sm {
+    margin: 50px 0;
+  }
+
   .shadow--left {
     position: absolute;
     bottom: 0;
